--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "debug": "~2.6.3",
     "ejs": "^2.5.6",
     "express": "~4.15.2",
-    "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "mysql": "^2.13.0",
     "serve-favicon": "~2.4.2",
-    "unit.js": "^2.0.0"
+    "unit.js": "^2.0.0",
+    "xml-crypto": "^0.10.1",
+    "xmldom": "^0.1.27"
   }
 }
